# openclaw

./: .env  .gitignore  AGENTS.md.backup  MEMORY.md  MLDL_IN_OPENCLAW.md  OPENCLAW_DEFINITION.md  PERMISSION_SETUP_COMPLETE.md  README.md  REST_API_GUIDE.md  ROADMAP.md  Vivace_Manual_v2.md  api_bridge.py  api_requirements.txt  check_keys.py  check_ollama.py  check_telegram_bot.py  compact_health_check.py  exhaustive_check.py  full_health_check.py  git_status.txt  list_models.py  openclaw_manual.json  openclaw_manual.md  package-lock.json  pnpm-lock.yaml  start.bat  start_api_bridge.bat  test_ontology.py  tsconfig.json  verify_gemini.py  verify_new_gemini.py  verify_openai.py
.kilocode/: AGENTS.md  mcp.json  mcp.json.backup
.venv_api/: pyvenv.cfg
config-snapshots/: cron-jobs.json  openclaw.json
docs/: RESEARCH_QUEUE.md
mcp_servers/: agen_pipeline_mcp.py  antigravity_nexus.py  antigravity_nexus.v5_nexus.py  god_gateway_nexus.py  god_gateway_nexus_v5.py  god_gateway_tools.py  google_drive_mcp.py  openclaw_agi_orchestrator.py  openclaw_creative_unified.py  reasoning_logger_mcp.py  stitch_coder_mcp.py
scripts/: clean-schemas.cjs  clean-schemas.js  test-brave-key.js  test-groq.js  test-openai.cjs  verify-search-module.ts
workspace/: AGENTS.md  BABY_KKOMA_DAILY_LOG.md  BABY_KKOMA_GROWTH_PROGRAM.md  COMMANDER_MANUAL.md  CURRENT_CORE_THEMES.md  GMAIL_INTEGRATION_GUIDE.md  GMAIL_INTEGRATION_SUCCESS.md  HOUSE_ACADEMY_DB_ARCHITECTURE.md  MEMORY.md  OLLAMA_FALLBACK_MODE.md  SKILLS.md  (+53 more)
workspace/openclaw_rust_db/: Cargo.toml
workspace/openclaw_rust_db/src/: main.rs
(+50 files in other folders)
